tree-sitter-zortex/test/corpus/basic.txt
==================
Heading
==================

@@Test

---

(document
  (article_header
    name: (line_content)))

==============================
List item
==============================

@@Header

- List item

---
(document
  (article_header
    name: (line_content))
  (blank_line)
  (list_item
    marker: "-"
      (text))
  (blank_line))

==============================
List vs paragraph distinction
=============================

@@Test

* list item one
  -notalist paragraph next to dash

---

(document
  (article_header
    name: (line_content))
    (block
      (list
        (list_item
          marker: "-"
          (text)))
      (block
        (paragraph
          (text))))
